@@ -2,6 +2,5 @@ module Shoe
   module Extensions
     autoload :DocManager,    'shoe/extensions/doc_manager'
     autoload :Specification, 'shoe/extensions/specification'
-    autoload :Validator,     'shoe/extensions/validator'
   end
 end
