@@ -1,3 +1,7 @@
+== Git
+
+* Rubygems 1.5.0 removes <tt>Gem::Validator#unit_test</tt>. Switch to using <tt>testrb</tt> for <tt>Shoe::Tasks::Test</tt>.
+
 == 0.7.1 -- 2010 October 12
 
 * Include top-level rdoc files in the shoe gem.
